<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title = "@string/pref_location_label"
        android:key = "@string/pref_location_key"
        android:defaultValue= "@string/pref_location_default"
        android:inputType="text"
        android:singleLine ="true"/>

    <ListPreference
        android:title="@string/pref_temperature_label"
        android:key = "@string/pref_units_key"
        android:defaultValue= "@string/pref_units_metric"
        android:entries="@array/temp_options"
        android:entryValues="@array/temp_options"/>

    <CheckBoxPreference
        android:title="Notifications"
        android:key = "@string/pref_notification_key"
        android:defaultValue= "@bool/pref_notification_default"/>

</PreferenceScreen>